--- a/smp-prototype/src/main/webapp/product.xhtml
+++ b/smp-prototype/src/main/webapp/product.xhtml
@@ -10,9 +10,9 @@
 </h:head>
 <h:body>
   <h:form>
-    <h:inputText value="#{productBean.name}" />
-    <h:outputText value="#{productBean.name}" />
-    <a href="#" onclick="func('#{productBean.name}');">link</a>
+    <h:inputText value="#{productBean.product.name}" />
+    <h:outputText value="#{productBean.product.name}" />
+    <a href="#" onclick="func('#{productBean.product.name}');">link</a>
     <h:commandButton action="#{productBean.execute}" value="execute" />
   </h:form>
   <script type="text/javascript">
