--- a/smp-prototype/src/main/webapp/product.xhtml
+++ b/smp-prototype/src/main/webapp/product.xhtml
@@ -6,19 +6,31 @@
   xmlns:ui="http://java.sun.com/jsf/facelets">
 <h:head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
   <title>SNP-Prototype</title>
 </h:head>
 <h:body>
-  <h:form>
-    <h:inputText value="#{productBean.product.name}" />
-    <h:outputText value="#{productBean.product.name}" />
-    <a href="#" onclick="func('#{productBean.product.name}');">link</a>
-    <h:commandButton action="#{productBean.execute}" value="execute" />
-  </h:form>
-  <script type="text/javascript">
-  function func(param) {
-	  alert(param);
-  }
-  </script>
+  <div class="container">
+    <h:form>
+      <div class="form-group">
+        Name
+        <h:inputText styleClass="form-control" value="#{productBean.condition.name}" />
+        <h:commandButton value="add" class="btn" action="#{productBean.add}" />
+      </div>
+      <div class="form-group">
+      <table class="table">
+        <ui:repeat value="#{productBean.products}" var="product" varStatus="status">
+        <tr>
+          <td><h:outputText value="#{status.index + 1}" /></td>
+          <td><h:inputText styleClass="form-control" value="#{product.name}" /></td>
+          <td><h:commandButton value="edit" class="btn" action="#{productBean.edit(status.index)}" /></td>
+          <td><h:commandButton value="remove" class="btn" action="#{productBean.remove(status.index)}" /></td>
+        </tr>
+        </ui:repeat>
+      </table>
+      </div>
+    </h:form>
+  </div>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" />
 </h:body>
 </html>
