ファイル名変更

--- a/smp-prototype/src/main/webapp/index.xhtml
+++ b/smp-prototype/src/main/webapp/index.xhtml
@@ -10,6 +10,6 @@
 </h:head>
 <h:body>
 Hello World!
-<h:outputLink value="product.html">Product</h:outputLink>
+<h:outputLink value="productList.html">Product</h:outputLink>
 </h:body>
 </html>
