入力画面実装開始

--- a/attendance-report/src/main/webapp/index.xhtml
+++ b/attendance-report/src/main/webapp/index.xhtml
@@ -8,6 +8,7 @@
   <title>Top</title>
 </h:head>
 <h:body>
-  <h:link value="sample1" outcome="sample1"></h:link>
+  <h:link value="Attendance Input" outcome="attendanceInput" />
+  <h:link value="Sample1" outcome="sample1" />
 </h:body>
 </html>
