--- a/attendance-report/src/main/webapp/attendanceInput.xhtml
+++ b/attendance-report/src/main/webapp/attendanceInput.xhtml
@@ -5,13 +5,10 @@
   xmlns:h="http://java.sun.com/jsf/html"
   xmlns:ui="http://java.sun.com/jsf/facelets">
 <h:head>
-  <title>Sample1</title>
+  <title>Attendance Input</title>
 </h:head>
 <h:body>
   <h:form>
-    <h:inputText value="#{sample1Bean.textValue}" />
-    <h:commandButton action="#{sample1Bean.returnNull}" value="NULL" />
-    <h:commandButton action="#{sample1Bean.returnUrl}" value="URL" />
   </h:form>
   <h:link value="Back" outcome="index" />
 </h:body>
